--- a/frontend/styles/navbar.module.scss
+++ b/frontend/styles/navbar.module.scss
@@ -122,7 +122,6 @@
 
 /* navStyles or a shared CSS file */
 .fullHeightRow {
-  height: calc(100vh - 60px);
   flex-wrap: nowrap;
 }
 
