--- a/frontend/styles/tag.module.scss
+++ b/frontend/styles/tag.module.scss
@@ -1,8 +1,8 @@
 .sideMenu {
+  margin-top: 60px;
   padding-bottom: 5px;
   padding-top: 10px;
-  max-width: 300px;
-  min-width: 250px;
+  width: 250px;
   background-color: var(--tag-list-bg);
   height: 100%;
   display: flex;
